# django-base

./: README.md  pyproject.toml
django_base/: apps.py  builtins.py  tests.py  utils.py  validators.py
django_base/models/: __init__.py  fields.py  models.py
django_base/templates/django_base/: _page_controls.html
