[tool.poetry]
name = "django-base"
version = "0.1.0"
description = "A utility package for Django."
license = "LGPL-3.0-or-later"
authors = ["Ryan Jackson <supra621@gmail.com>"]
readme = "README.md"
packages = [{include = "django_base"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
