[tool.poetry]
name = "django-base"
version = "0.1.0"
description = "A utility package for Django."
license = "AGPL"
authors = ["Ryan Jackson <supra621@gmail.com>"]
readme = "README.md"
packages = [{include = "django_base"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
